--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 body {
   background-color: black;
   margin: 0;
+  max-width: 100vw;
   padding: 0;
   width: 100%;
 }
 
 .App {
-  text-align: center;
+  max-width: 100vw;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .App-logo {
@@ -45,4 +48,14 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+::-webkit-scrollbar {
+  background-color: #ffe60300;
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #dfd222;
+  border-radius: 10px;
 }
