--- a/src/styles/Filters.css
+++ b/src/styles/Filters.css
@@ -1,3 +1,13 @@
 .filters li {
   min-height: 20px;
 }
+
+.buttonVolts:hover {
+  background-color: black;
+  border: 0.5px solid white;
+  color: white;
+}
+
+.iconVolts:hover {
+  color: white;
+}
